@@ -69,20 +69,23 @@ if test "$OSYSTEM" != "windows" ; then
      if test -n "$found_file" ; then
         ssl_libraries="-L$d"
         ssl_lib="-l`echo $found_file | sed 's/lib//;s/\.so*//;s/\.a//'`"
+        AC_MSG_RESULT($ssl_libraries ${ssl_lib})
         break
      fi
    done
    else
      ssl_libraries="-L/c/windows"
      ssl_lib="-llibeay32 -llibssl32"
+     AC_MSG_RESULT($ssl_libraries ${ssl_lib})
 fi
 
+AC_MSG_CHECKING(whether openssl is usable)
 if test -z "$ssl_libraries" -o -z "$ssl_lib" -o -z "$ssl_includes"; then
     ssl_available="no"
     AC_MSG_WARN(ssl libraries not found.)
 else
     ssl_available="yes"
-    AC_MSG_RESULT($ssl_libraries ${ssl_lib})
+    AC_MSG_RESULT(yes)
 fi
 
 
